tests/parser/errors/default_value_self.rv
fn bad(self = 5) {}
